[gd_scene load_steps=5 format=1]

[ext_resource path="res://Game/Objectives/enemy_nexus.gd" type="Script" id=1]
[ext_resource path="res://Game/Objectives/nexus_enemy.png" type="Texture" id=2]
[ext_resource path="res://Game/Objectives/explosion.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 80, 80 )

[node name="Enemy Nexus" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 64
collision/mask = 0
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 100.0
one_shot = true
autostart = false

[node name="Particles2D" parent="." instance=ExtResource( 3 )]

config/preprocess = 0.2
config/explosiveness = 0.2

[node name="timer_destroy" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="timer_destroy" to="." method="_on_timer_destroy_timeout"]


